# adobe-ccf-document-generator

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
backend/: Dockerfile  index.html  openapi.yaml  pyproject.toml  requirements.txt  template_editor.html
backend/data/: templates.json
backend/data-backup/processed/: controls_v2.json  controls_v2_old.json  controls_v3.json
backend/data-backup/test_configs/: access_mgmt_content_test.json  policy_content_test.json
backend/data/processed/: control_guidance.json  controls_mapping.json  controls_v2.json  erl.json
backend/data/raw/: control_guidance.csv  controls_mapping_check.csv  controls_v2.csv  erl.csv
backend/data/test_configs/: access_mgmt_test.json
backend/knowledge/: testing-plan.md
backend/output/policies/: asset_management_policy_20241218.md  asset_management_policy_detailed_20241218.md  asset_management_policy_matrix_only_20241218.md  asset_management_policy_standard_20241218.md  asset_management_policy_test2_20241218.md  asset_management_policy_test_20241218.md  backup_management_policy_detailed_20241218.docx  (+6 more)
backend/scripts/: extract_control_domains.py  generate_policy_from_input.py  generate_policy_from_web.py  process_controls_mapping.py  process_csv_data.py
backend/src/: data_processor.py  document_converter.py  framework_mapper.py  policy_generator.py  templates.py
backend/static/: framework-mapping.html  index.html  template_editor.html
backend/templates/: policy_template.md
backend/tests/: test_policy_content.py  test_policy_content_v2.py  test_policy_gen.py
(+15 files in other folders)
