[tool.poetry]
name = "document-generator"
version = "0.1.0"
description = "Document generation testing framework"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
pytest = "^7.4.0"
pyyaml = "^6.0.1"
markdown = "^3.5.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
